# im-canna3

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  chartype.c  chartype.h  config.h.in  config.status  configure  configure.ac  enc.c  enc.h  furigana.c  furigana.h  handle_canna.c  handle_canna.h  im-canna-intl.h  im-canna.spec  im-canna.spec.in  imcanna.c  imsss.c  imsss.h  keydefs.c  keydefs.h  libtool  sub_cand_modewin.c  sub_candwin.c  sub_direct_mode.c  sub_function_mode.c  sub_japanese_mode.c  sub_modewin.c  util.c  util.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
